--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,38 @@
-<p>home works!</p>
+<div class="container">
+  <h1>Lista de Imóveis</h1>
+<mat-grid-list cols="3" rowHeight="3:4">
+  <mat-grid-tile>
+    <!-- card 01 -->
+    <mat-card>
+
+      <img mat-card-image src="../../assets/imagens/casa.jpg">
+      <mat-card-content>
+        <h2>Casa Magnífica</h2>
+        <ul>
+          <li>Quartos: 04</li>
+          <li>Banheiros: 03</li>
+          <li>Metragem: 360 m²</li>
+          <li>Preço: R$ 890.000,00</li>
+        </ul>
+      </mat-card-content>
+    </mat-card>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <!-- card 02 -->
+    <mat-card>
+      <mat-card-content>Simple card</mat-card-content>
+      <img mat-card-image src="../../assets/imagens/casa.jpg">
+    </mat-card>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <!-- card 03 -->
+    <mat-card>
+      <mat-card-content>Simple card</mat-card-content>
+      <img mat-card-image src="../../assets/imagens/casa.jpg">
+      </mat-card>
+  </mat-grid-tile>
+  <mat-grid-tile>4</mat-grid-tile>
+  <mat-grid-tile>5</mat-grid-tile>
+  <mat-grid-tile>6</mat-grid-tile>
+</mat-grid-list>
+</div>
