--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>Essa é minha aplicação</h1>
-
+<mat-toolbar>
+  <div class="container">
+    <h1>Lar Feliz Imóveis</h1>
+    <span class="menu-spacer"></span>
+    <button mat-button routerLink="/">Home</button>
+    <button mat-button routerLink="quem-somos">Quem Somos</button>
+    <button mat-button routerLink="contato">Contato</button>
+  </div>
+</mat-toolbar>
 <router-outlet></router-outlet>
